1-Install-and-Run-a-Kubernetes-Cluster-on-Ubuntu/nodes/security_group.tf
resource "aws_security_group" "security-group" {
  vpc_id = aws_vpc.vpc.id
  description = "Allowing SSH Access"
  ingress = [
    for port in [22, 80]: {
      description = "TLS from VPC"
      from_port = port
      to_port = port
      protocol = "tcp"
      ipv6_cidr_blocks = ["::/0"]
      self = false
      prefix_list_ids = []
      security_groups = []
      cidr_blocks = ["0.0.0.0/0"]
    }
  ]
  egress = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      self        = false
      prefix_list_ids = []
      security_groups = []
      description = "Allow all outbound traffic"
    }
  ]
  tags = {
    Name = var.sg-name
  }
}
